Updated to latest template version

--- a/README.org
+++ b/README.org
@@ -4,11 +4,11 @@
 
 Just grab the executables from Releases section.
 
-** System requirements
+** Minimum system requirements
 
-+ Windows 7 SP1 or Ubuntu 16.04
++ Windows 7 SP1, MacOS Monterey or Ubuntu 20.04
 + 2 GB of RAM
-+ 40 Mb of free disk space
++ 60 Mb of free disk space
 
 ** Author
 
